deployment/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: webapp-route
  namespace: 24036-ns
spec:
  to:
    kind: Service
    name: webapp-service
  port:
    targetPort: 80
